--- a/platforms/android/assets/www/css/custom.css
+++ b/platforms/android/assets/www/css/custom.css
@@ -54,14 +54,14 @@
             z-index: 100;
             width: 100%;
             height: 100%;
-            background-color: rgba(192, 192, 192, 0.5);
+            background-color: white;
             background-image: url('../appframework/ajax-loader.gif');
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #afui {
-            display: block;
+            display: none;
         }
 
         .overthrow-enabled .overthrow {
