--- a/platforms/android/assets/www/css/custom.css
+++ b/platforms/android/assets/www/css/custom.css
@@ -1,70 +1,112 @@
-﻿  .Footer {
-            width: 100%;
-            padding: 1px;
-            background-color: #0088D1;
-            color: #ffffff;
-            bottom: 0px;
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto;
-            position: fixed;
-            bottom: 0;
-        }
+﻿.Footer {
+    width: 100%;
+    padding: 1px;
+    background-color: #0088D1;
+    color: #ffffff;
+    bottom: 0px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: fixed;
+    bottom: 0;
+}
 
-        .Textbox {
-            width: 80%;
-            color: black;
-        }
+.Textbox {
+    width: 80%;
+    color: black;
+}
 
 
-        .MainComments {
-              -webkit-overflow-scrolling:touch;
-        }
+.MainComments {
+    -webkit-overflow-scrolling: touch;
+}
 
-        .scroll {
-            overflow: auto;
-            -webkit-overflow-scrolling: touch;
-        }
+.scroll {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
 
-        .ChatWindow li {
-            text-decoration: solid;
-            font: 200;
-            font-style: normal;
-            font-size: 17px;
-            margin-bottom: 3px;
-            margin-top: 3px;
-            height: 30px;
-            width: auto;
-            padding-top: 4px;
-            padding-left: 5px;
-        }
+.ChatWindow li {
+    text-decoration: solid;
+    font: 200;
+    font-style: normal;
+    font-size: 17px;
+    margin-bottom: 5px;
+    margin-top: 6px;
+    width: auto;
+    padding-top: 5px;
+    padding-left: 5px;
 
-        #LeaveComments {
-            margin-left: auto;
-            margin-right: auto;
-            text-align: left;
-            width: 60%;
-        }
+      border: 1px solid #808080 /*{c-bdown-border}*/;
+    background: #fdfdfd /*{c-bdown-background-color}*/;
+    
+    color: #111111 /*{c-bdown-color}*/;
+    text-shadow: 0 /*{c-bdown-shadow-x}*/ 1px /*{c-bdown-shadow-y}*/ 1px /*{c-bdown-shadow-radius}*/ #ffffff /*{c-bdown-shadow-color}*/;
+    background-image: -webkit-gradient(linear, left top, left bottom, from( #eee /*{c-bdown-background-start}*/ ), to( #fdfdfd /*{c-bdown-background-end}*/ )); /* Saf4+, Chrome */
+    background-image: -webkit-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* Chrome 10+, Saf5.1+ */
+    background-image: -moz-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* FF3.6 */
+    background-image: -ms-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* IE10 */
+    background-image: -o-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* Opera 11.10+ */
+    background-image: linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ );
 
-        #loading {
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 100;
-            width: 100%;
-            height: 100%;
-            background-color: white;
-            background-image: url('../appframework/ajax-loader.gif');
-            background-repeat: no-repeat;
-            background-position: center;
-        }
+}
 
-        #afui {
-            display: none;
-        }
 
-        .overthrow-enabled .overthrow {
-            overflow: auto;
-            -webkit-overflow-scrolling: touch;
-        }
+
+    #userList li:hover {
+        border: 1px solid #bbbbbb /*{c-bhover-border}*/;
+        background: #dadada /*{c-bhover-background-color}*/;
+        font-weight: bold;
+        color: #101010 /*{c-bhover-color}*/;
+        text-shadow: 0 /*{c-bhover-shadow-x}*/ 1px /*{c-bhover-shadow-y}*/ 1px /*{c-bhover-shadow-radius}*/ #fff /*{c-bhover-shadow-color}*/;
+        background-image: -webkit-gradient(linear, left top, left bottom, from( #ededed /*{c-bhover-background-start}*/ ), to( #dadada /*{c-bhover-background-end}*/ )); /* Saf4+, Chrome */
+        background-image: -webkit-linear-gradient(#ededed /*{c-bhover-background-start}*/, #dadada /*{c-bhover-background-end}*/ ); /* Chrome 10+, Saf5.1+ */
+        background-image: -moz-linear-gradient(#ededed /*{c-bhover-background-start}*/, #dadada /*{c-bhover-background-end}*/ ); /* FF3.6 */
+        background-image: -ms-linear-gradient(#ededed /*{c-bhover-background-start}*/, #dadada /*{c-bhover-background-end}*/ ); /* IE10 */
+        background-image: -o-linear-gradient(#ededed /*{c-bhover-background-start}*/, #dadada /*{c-bhover-background-end}*/ ); /* Opera 11.10+ */
+        background-image: linear-gradient(#ededed /*{c-bhover-background-start}*/, #dadada /*{c-bhover-background-end}*/ );
+    }
+
+#userList li:active {
+    border: 1px solid #808080 /*{c-bdown-border}*/;
+    background: #fdfdfd /*{c-bdown-background-color}*/;
+    font-weight: bold;
+    color: #111111 /*{c-bdown-color}*/;
+    text-shadow: 0 /*{c-bdown-shadow-x}*/ 1px /*{c-bdown-shadow-y}*/ 1px /*{c-bdown-shadow-radius}*/ #ffffff /*{c-bdown-shadow-color}*/;
+    background-image: -webkit-gradient(linear, left top, left bottom, from( #eee /*{c-bdown-background-start}*/ ), to( #fdfdfd /*{c-bdown-background-end}*/ )); /* Saf4+, Chrome */
+    background-image: -webkit-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* Chrome 10+, Saf5.1+ */
+    background-image: -moz-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* FF3.6 */
+    background-image: -ms-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* IE10 */
+    background-image: -o-linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ ); /* Opera 11.10+ */
+    background-image: linear-gradient(#eee /*{c-bdown-background-start}*/, #fdfdfd /*{c-bdown-background-end}*/ );
+}
+
+#LeaveComments {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    width: 60%;
+}
+
+#loading {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    background-image: url('../appframework/ajax-loader.gif');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#afui {
+    display: none;
+}
+
+.overthrow-enabled .overthrow {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
