--- a/www/appframework/af.ui.css
+++ b/www/appframework/af.ui.css
@@ -1825,6 +1825,18 @@ color:inherit;
  	background:none;
 }
 
+#afui.android #navbar li {
+	color:inherit;
+    top:0px;
+}
+
+#afui.android #navbar li.pressed {
+ 	border:0px;
+ 	border-top:4px solid #33B5E5;
+ 	border-radius:0px;
+ 	background:none;
+}
+
 #afui.android #navbar .icon.pressed:before {
 	color:inherit;
 }
