--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -32,11 +32,12 @@
     font-style: normal;
     font-size: 17px;
     margin-bottom: 5px;
-    margin-top: 6px;
+    margin-top: 7px;
     width: auto;
-    padding-top: 5px;
-    padding-left: 5px;
-
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 6px;
+    padding-right: 6px;
       border: 1px solid #808080 /*{c-bdown-border}*/;
     background: #fdfdfd /*{c-bdown-background-color}*/;
     
