--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -60,5 +60,5 @@
     <preference name="SplashScreen" value="screen" />
     <preference name="SplashScreenDelay" value="5000" />
     <preference name="permissions" value="none" />
-    <preference name="Orientation" value="landscape" />
+    <preference name="Orientation" value="portrait" />
 </widget>
