--- a/WebApplication1/WebApplication1 - Copy/WebApplication1/css/bhabo.css
+++ b/WebApplication1/WebApplication1 - Copy/WebApplication1/css/bhabo.css
@@ -10,10 +10,16 @@
     padding:10px 10px 10px 10px;
     margin:10px;
     cursor: default;
-    width:auto;
+    /*width:auto;*/
     float:left;
-    position:relative;
-    z-index:199;
+    
+    /*z-index:199;*/
+
+      
+    position:fixed;
+    top:0;
+    width:40%;
+    z-index:100;
 }
 #timer {
     border-radius:10px;
